Fix links for rectangle popups. (+2 squashed commits) Squashed commits: [13662cc] Ok lets try it another way. [87f2085] Trying to deal with bad links on bounding box popups

--- a/app/assets/stylesheets/modules/home.css.scss
+++ b/app/assets/stylesheets/modules/home.css.scss
@@ -454,15 +454,18 @@ footer:after {
 
 .vndl-search .disabled {
   color: $disabled-color;
-
-
 }
 
-.disabled .searchmap-group {
+.disabled .searchmap {
 
   opacity: 0.50;
 }
 
+
+.searchmap {
+  padding-left: 0px !important;
+
+}
 .vndl-search .form-group {
   // even out top and bottom margins
   // Bookstrap by default has only bottom margin
